--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body{
     padding: 0%;
 }
 
+.fullview{
+    overflow: hidden;
+}
+
+.main{
+    height: 100vh;
+}
+
 .bg_img{
     width: 102vw;
     height: 100vh;
@@ -62,12 +70,13 @@ body{
     position: absolute;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
     position: absolute;
+    margin: 0%;
     margin-top: 55px;
     color: white;
-    row-gap: 5px;
+    /* row-gap: 5px; */
     box-sizing: border-box;
     /* border: 2px solid red; */
     height: 150px;
@@ -136,10 +145,85 @@ body{
 }
 
 /* news page */
-.news{
+.news_sec{
     /* background-color: #EFE8EB; */
     height: 100vh;
+    position: relative;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0%;
+    padding: 0%;
+    /* border: 2px solid gold; */
 }
+
+#news_body{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    /* border: 2px solid red; */
+    padding: 55px;
+    box-sizing: border-box;
+}
+
+.news_title{
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 42px;
+    font-weight: 700;
+    height: 100px;
+    
+    
+    /* border: 2px solid red; */
+
+}
+
+@media (max-width:800px){
+    .news_section{
+        flex-direction: column;
+        /* background-color: #CE0000; */
+        /* border: 2px solid gold; */
+        padding: 50px 0px;
+        row-gap: 25px;
+    }
+}
+
+.news_section{
+    /* position: absolute; */
+    display: flex;
+    flex-wrap: nowrap;
+    /* min-width: 500px; */
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 50px;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+    /* border: 2px solid red; */
+}
+
+.news{
+    height: 500px;
+    width: 400px;
+    margin: 0px 15px;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: -8px 8px 12px #12121240;
+}
+
+
+
+
+
+
+
+
+
 
 /* faq page */
 .faq{
