--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body{
     font-family: 'Roboto', sans-serif;
     color: white;
-    /* background-color: black; */
-    background-color: #EFE8EB;
+    background-color: black;
+    /* background-color: #EFE8EB; */
     margin: 0%;
     padding: 0%;
 }
@@ -32,6 +32,8 @@ body{
     align-items: center;
     display: flex;
     z-index: 1;
+    margin: 0%;
+    padding: 0%;
 }
  
 /* FAQ button */
