--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body{
     font-family: 'Roboto', sans-serif;
     color: white;
-    background-color: black;
-    /* background-color: #EFE8EB; */
+    /* background-color: black; */
+    background-color: #EFE8EB;
     margin: 0%;
     padding: 0%;
 }
@@ -40,7 +40,7 @@ body{
 /* click animation */
 
 .faq_button{
-    position: absolute;
+    position: relative;
     margin: 13px 10px;
     /* margin-left: 10px; */
     height: 25px;
@@ -54,7 +54,7 @@ body{
     font-weight: 500;
     text-align: center;
     box-shadow: -2px 2px 4px #12121240;
-    z-index: 2;
+    /* z-index: 2; */
     box-sizing: border-box;
     /* border: 2px solid black; */
 }
@@ -158,6 +158,7 @@ body{
     align-items: center;
     margin: 0%;
     padding: 0%;
+    background-color: #EFE8EB;
     /* border: 2px solid gold; */
 }
 
@@ -207,7 +208,7 @@ body{
     margin: 0px 50px;
     margin-bottom: 50px;
     box-sizing: border-box;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 .news{
