--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body{
     font-family: 'Roboto', sans-serif;
     color: white;
-    background-color: black;
-    /* background-color: #EFE8EB; */
+    /* background-color: black; */
+    background-color: #EFE8EB;
     margin: 0%;
     padding: 0%;
 }
@@ -34,6 +34,29 @@ body{
     z-index: 1;
     margin: 0%;
     padding: 0%;
+    /* text-align: center; */
+    justify-content: space-between;
+}
+#home_button
+{
+    /* position: absolute; */
+    margin: 13px 10px;
+    /* margin-left: 10px; */
+    height: 25px;
+    width: 50px;
+    color: #CE0000;
+    background-color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    border: none;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    box-shadow: -2px 2px 4px #12121240;
+    z-index: 2;
+    box-sizing: border-box;
+    /* border: 2px solid black; */
+    text-un
 }
  
 /* FAQ button */
@@ -221,8 +244,55 @@ body{
 
 
 
+.department_section
+{
+    /* position: absolute; */
+    display: flex;
+    flex-wrap: nowrap;
+    /* min-width: 500px; */
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 50px;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+    /* border: 2px solid red; */
+}
 
+.department
+{
+    height: 500px;
+    width: 400px;
+    margin: 0px 15px;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0px 2px 12px #12121240;
+}
 
+.department_title{
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 42px;
+    font-weight: 700;
+    height: 100px;
+    
+    
+    /* border: 2px solid red; */
+
+}
+
+#department_body{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    /* border: 2px solid red; */
+    padding: 55px;
+    box-sizing: border-box;
+}
 
 
 
