fixed margin issues

--- a/style.css
+++ b/style.css
@@ -37,27 +37,6 @@ body{
     /* text-align: center; */
     justify-content: space-between;
 }
-#home_button
-{
-    /* position: absolute; */
-    margin: 13px 10px;
-    /* margin-left: 10px; */
-    height: 25px;
-    width: 50px;
-    color: #CE0000;
-    background-color: white;
-    border-radius: 5px;
-    text-decoration: none;
-    border: none;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    box-shadow: -2px 2px 4px #12121240;
-    z-index: 2;
-    box-sizing: border-box;
-    /* border: 2px solid black; */
-    text-un
-}
  
 /* FAQ button */
 /* click animation */
@@ -231,7 +210,7 @@ body{
     margin: 0px 50px;
     margin-bottom: 50px;
     box-sizing: border-box;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .news{
@@ -243,7 +222,7 @@ body{
     box-shadow: 0px 2px 12px #12121240;
 }
 
-
+/* department page */
 
 .department_section
 {
@@ -251,19 +230,20 @@ body{
     display: flex;
     flex-wrap: nowrap;
     /* min-width: 500px; */
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin: 0px 50px;
+    /* margin: 0px 50px; */
     margin-bottom: 50px;
     box-sizing: border-box;
     /* border: 2px solid red; */
+    column-gap: 20px;
 }
 
 .department
 {
     height: 500px;
     width: 400px;
-    margin: 0px 15px;
+    /* margin: 0px 15px; */
     background-color: white;
     border-radius: 12px;
     box-shadow: 0px 2px 12px #12121240;
@@ -275,9 +255,10 @@ body{
     justify-content: center;
     align-items: center;
     color: black;
-    font-size: 42px;
+    font-size: 32px;
     font-weight: 700;
     height: 100px;
+    margin-top: 20px;
     
     
     /* border: 2px solid red; */
@@ -295,8 +276,39 @@ body{
     box-sizing: border-box;
 }
 
+/* todo - this will be for menu button */
+#home_button{
+    /* position: absolute; */
+    margin: 13px 10px;
+    /* margin-left: 10px; */
+    height: 25px;
+    width: 50px;
+    color: #CE0000;
+    background-color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    border: none;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    box-shadow: -2px 2px 4px #12121240;
+    z-index: 2;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid black; */
+    /* text-un */
+}
 
+#home_button a{
+    text-decoration: none;
+}
 
+#home_button a:visited{
+    text-decoration: none;
+    color: inherit;
+}
 
 
 /* faq page */
