background color change

--- a/profpage.css
+++ b/profpage.css
@@ -3,7 +3,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     color: white;
-    background-color: lightgray;
+    background-color: #efe8eb;
     /* background-color: #EFE8EB; */
     margin: 0%;
     padding: 0%;
