--- a/style.css
+++ b/style.css
@@ -37,37 +37,52 @@ body{
     /* text-align: center; */
     justify-content: space-between;
 }
-#home_button
-{
-    /* position: absolute; */
-    margin: 13px 10px;
-    /* margin-left: 10px; */
-    height: 25px;
-    width: 50px;
-    color: #CE0000;
-    background-color: white;
-    border-radius: 5px;
-    text-decoration: none;
-    border: none;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    box-shadow: -2px 2px 4px #12121240;
-    z-index: 2;
-    box-sizing: border-box;
+
+#menu{
+    display: flex;
+    align-items: center;
     /* border: 2px solid black; */
+
+    /* width: 300px; */
+    
 }
-a:link { text-decoration: none; }
+
+
+
+.sub_menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    margin-left: 70px;
+    /* border: 2px solid gold; */
+    width: 130px;
+    display: none;
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+/* #menu:hover .menu_button{
+    background-color: blue;
+} */
+
+#menu:hover .sub_menu{
+    display: block;
+    /* cursor: pointer; */
+    /* background-color: black; */
+}
+
+.sub_menu a:hover{
+    color: black;
+}
+
 a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:active { text-decoration: none; }
  
 /* FAQ button */
 /* click animation */
 
-.faq_button
-{
-    position: relative;
+.menu_button{
+    /* position: relative; */
     margin: 13px 10px;
     /* margin-left: 10px; */
     height: 25px;
@@ -134,11 +149,6 @@ a:active { text-decoration: none; }
     /* width: 300px; */
 }
 
-.main_search_bar ::placeholder{
-    color: #CE0000;
-    opacity: 50%;
-}
-
 #search_bar_main{
     width: 50vw;
     height: 35px;
@@ -148,6 +158,9 @@ a:active { text-decoration: none; }
     color: #CE0000;
     border-radius: 5px;
     font-size: 18px;
+}
+#search_bar_main a{
+    opacity: 80%;
 }
 
 /* down arrow */
@@ -342,4 +355,10 @@ a:active { text-decoration: none; }
 /* faq page */
 .faq{
     min-height: 100vh;
+}
+
+
+a{
+    text-decoration: none;
+    color: inherit;
 }
