--- a/faq.css
+++ b/faq.css
@@ -46,7 +46,7 @@ a:visited{
     position: absolute;
     margin-left: 70px;
     /* border: 2px solid gold; */
-    width: 140px;
+    /* width: 140px; */
     display: none;
     font-size: inherit;
     font-weight: inherit;
@@ -62,6 +62,10 @@ a:visited{
 
 .sub_menu a:hover{
     color: black;
+}
+
+.sub_menu *{
+    margin: 2px;
 }
 
 .header{
