--- a/profpage.css
+++ b/profpage.css
@@ -23,8 +23,43 @@ body{
     padding: 0%;
 }
 
-.faq_button{
-    /* position: absolute; */
+#menu{
+    display: flex;
+    align-items: center;
+    /* border: 2px solid black; */
+
+    /* width: 300px; */
+    
+}
+
+.sub_menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    margin-left: 70px;
+    /* border: 2px solid gold; */
+    /* width: 130px; */
+    display: none;
+    font-size: inherit;
+    font-weight: inherit;
+}
+.sub_menu *{
+	margin: 2px;
+}
+
+#menu:hover .sub_menu{
+    display: block;
+    /* cursor: pointer; */
+    /* background-color: black; */
+}
+
+.sub_menu a:hover{
+    color: black;
+}
+
+.menu_button{
+    /* position: relative; */
     margin: 13px 10px;
     /* margin-left: 10px; */
     height: 25px;
@@ -38,10 +73,12 @@ body{
     font-weight: 500;
     text-align: center;
     box-shadow: -2px 2px 4px #12121240;
-    z-index: 2;
+    /* z-index: 2; */
     box-sizing: border-box;
     /* border: 2px solid black; */
 }
+
+/* ------------------------------------------------------ */
 
 #professor_name{
 	align-items: center;
@@ -52,19 +89,20 @@ body{
 {
 	display: flex;
 	flex-direction: row;
-	padding: 3rem;
+	padding: 50px 100px;
 	margin-bottom: 0;
 	justify-content: space-between;
+	align-items: center;
+
 }
 
 #left_container{
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
-	width: 50%;
-	padding: 2.5rem;
 	flex-basis: 50%;
-
+	box-sizing: border-box;
+	justify-content: space-between;
+	align-items: center;
 	height: 80vh;
 
 	/*! for testing */
@@ -72,17 +110,15 @@ body{
 }
 
 .text-box{
-	height: 200px;
+	height: 150px;
+	/* border: 2px solid red; */
 }
 
 #right_container{
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
-	width: 50%;
-	padding: 2.5rem;
-	justify-content: right;
-	flex-basis: 5%;
+	height: 80vh;
+	justify-content: space-between;
 }
 
 #department, #research_name, #desc, #responsibilities, #picture{
@@ -110,7 +146,7 @@ body{
 }
 
 #button{
-	background-color: red;
+	background-color: #CE0000;
 	color: white;
 	box-shadow: 0px 2px 12px #12121240;
 	width: 350px;
@@ -120,36 +156,24 @@ body{
 	font-size: 38px;
 }
 
-#top {
-	color: red;
-	font-size: 110%;
+.top {
+	color: #CE0000;
+	font-size: 20px;
+	font-weight: 600;
+	margin: 0%;
+	/* border: 2px solid red; */
+}
+.text-box p{
+	margin: 0%;
+	margin-top: 5px;
 }
 
-p {
+a{
+	text-decoration: none;
+	color: inherit;
 }
 
-/*#department {
-	grid-area: area-1;
-	grid-row-start: 1;
-	grid-row-end: 3;
+a:visited{
+	text-decoration: none;
+	color: inherit;
 }
-
-#research_name {
-	grid-area: area-2;
-}
-
-#desc {
-	grid-area: area-3;
-}
-
-#responsibilities {
-	grid-area: area-4;
-}
-
-#picture {
-	grid-area: area-5;
-}
-
-#button {
-	grid-area: area-6;
-} */
