--- a/profpage.css
+++ b/profpage.css
@@ -138,7 +138,7 @@ body{
 	height: 400px;
 	width: 350px;
 	color: black;
-	/* background-color: #CE0000; */
+	background-color: #CE0000;
 
 	/*! maybe delete later */
 	/* display: flex;
