--- a/profpage.css
+++ b/profpage.css
@@ -124,7 +124,8 @@ body{
 #department, #research_name, #desc, #responsibilities{
 	background-color: white;
 	color: black;
-	box-shadow: 0px 2px 12px #12121240;
+	/* box-shadow: 0px 2px 12px #12121240; */
+    box-shadow: -4px 4px 12px #12121240;
 	border-radius: 12px;
 	box-sizing: border-box;
 	padding: 5px 10px;
@@ -139,6 +140,7 @@ body{
 	width: 350px;
 	color: black;
 	background-color: #CE0000;
+	border-radius: 12px;
 
 	/*! maybe delete later */
 	/* display: flex;
@@ -150,7 +152,7 @@ body{
 	height: 100%;
 	width: 100%;
 	border-radius: 12px;
-	box-shadow: 0px 2px 12px #12121280;
+	box-shadow: -4px 4px 12px #12121280;
 	object-fit: cover;
 	/* display: flex;
 	justify-content: center;
@@ -160,12 +162,12 @@ body{
 #button{
 	background-color: #CE0000;
 	color: white;
-	box-shadow: 0px 2px 12px #12121280;
+	box-shadow: -4px 4px 12px #12121280;
 	width: 350px;
 	height: 80px;
 	border: none;
 	border-radius: 12px;
-	font-size: 38px;
+	font-size: 42px;
 }
 
 .top {
