--- a/faq.css
+++ b/faq.css
@@ -35,10 +35,12 @@ a:visited{
 #menu{
     display: flex;
     align-items: center;
-    /* border: 2px solid black; */
+    display: flex;
+    margin-left: 10px;
+}
 
-    /* width: 300px; */
-    
+#menu *{
+    margin: 5px;
 }
 
 .sub_menu{
